@@ -7,6 +7,8 @@ v4.6.2
 - FIX: Backpacks require white dye on initial craft
 - FIX: Signal propagation issues from wires to framed wires
 - FIX: Unresponsive and glitchy containers and inventories
+- CHANGE: Dyes can now be used to change colour of segment displays
+- CHANGE: Machine placement orientation now relies on look angle instead of side clicked
 
 v4.6.1
 - ADDED: Block Placer
